create middleware and updates routes
