# src/routes/link.route.js
@@ -1,10 +1,10 @@
 const route = require('express').Router()
 const controllerLinks = require('../controllers/link.controller')
+const { validId } = require('../midllewares/link.midlleware')
 
 route.get('/', controllerLinks.findAllLinksController)
-
 route.post('/create', controllerLinks.createLinkController)
-route.put('/update/:id', controllerLinks.updateLinkController)
-route.delete('/delete/:id', controllerLinks.deleteLinkController)
+route.put('/update/:id', validId, controllerLinks.updateLinkController)
+route.delete('/delete/:id', validId, controllerLinks.deleteLinkController)
 
 module.exports = route
